{{$NEXT}}

0.007     2015-08-01 15:17:22 EDT
  - Clarify use of URLs in connection strings

0.006     2015-07-28 23:54:45 EDT
  - Fix results rows() method to return statement handle rows
  - Make scheme optional for from_string() (and thus the constructor)

0.005     2015-07-28 21:59:23 EDT
  - Allow specifying bind types for query parameters

0.004     2015-07-28 20:48:04 EDT
  - Depend on DBI explicitly
  - Remove List::Util dependency
  - Add blog example

0.003     2015-07-28 12:56:30 EDT
  - Minor migrations fixes

0.002     2015-07-28 12:39:12 EDT
  - Allow passing callback to query()

0.001     2015-07-28 02:48:42 EDT
  - First release