@@ -5,6 +5,9 @@ requires 'DBD::SQLite' => '1.48';
 requires 'File::Temp';
 requires 'Mojolicious' => '6.14';
 requires 'Scalar::Util';
+requires 'URI'         => '1.69';
+requires 'URI::file'   => '4.21';
+requires 'URI::QueryParam' => '1.69';
 test_requires 'Test::More' => '0.88';
 author_requires 'Test::Pod'           => '1.14';
 author_requires 'Test::Pod::Coverage' => '1.04';
