@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Use and recommend URI to portably parse filenames into URLs
 
 0.007     2015-08-01 15:17:22 EDT
   - Clarify use of URLs in connection strings
